# pipeline-lab

./: .gitignore  Linux.sh  Run.sh
.cache/clangd/index/: Agent.cpp.C2547EF54D185CA9.idx  Agent.h.DE4A4BF39A4B9BF9.idx  AssetIndex.cpp.A23EB03C48303E59.idx  FileEvent.h.04F7937089DDCA01.idx  FileWatcher.cpp.C302959F4FA12A41.idx  FileWatcher.h.4F75ADBC084BB505.idx  FileWatcherLinux.cpp.2FB39049442837D6.idx  FileWatcherLinux.h.407FAC860AB00CD8.idx  Logger.cpp.6E1FEB2713FCEE4E.idx  Logger.h.088E5CB8AE8FECE8.idx  Types.h.AE27C7654B37C0B0.idx  ansicolor_sink-inl.h.E75533E27FD1EA56.idx  ansicolor_sink.h.189A43637A29DE88.idx  async.cpp.A35907EED88FAF6F.idx  async.h.769CCA180C59B344.idx  async_logger-inl.h.0885A3E63FF2B2E7.idx  async_logger.h.8E0119D34B5B790E.idx  backtracer-inl.h.E4AD8CE4EE32039D.idx  backtracer.h.992695E9A9AC98D9.idx  base_sink-inl.h.F4079E4ED6DCE959.idx  base_sink.h.C4481AB3523DC181.idx  basic_file_sink-inl.h.372F3963E28EB294.idx  basic_file_sink.h.C99C0DDC80654ED9.idx  bundled_fmtlib_format.cpp.F6554CAEB65B3C9C.idx  cfg.cpp.9F6859483B46961B.idx  circular_q.h.7E65997B76293A87.idx  color_sinks.cpp.0B44AF19C922FDC6.idx  common-inl.h.162A389F8E8CF7DF.idx  common.h.38A1CA9843CC8AF3.idx  console_globals.h.33F2BB5121D67CCD.idx  (+47 more)
agent/: CMakeLists.txt
agent/config/: config.json
agent/include/: Agent.h  Logger.h  Types.h
agent/include/assets/: Asset.h  AssetIndex.h
agent/include/fs/: FileEvent.h  FileWatcher.h  FileWatcherLinux.h
agent/include/http/: EventStream.h  HttpServer.h
agent/src/: Agent.cpp  AssetIndex.cpp  EventStream.cpp  FileWatcher.cpp  HttpServer.cpp  Logger.cpp  main.cpp
agent/src/Linux/: FileWatcherLinux.cpp
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
docs/: API.md  ARCHITECTURE.md
(+7 files in other folders)
